logs/dag_id=ltv-pipeline/run_id=manual__2022-08-03T15:29:54.472361+00:00/task_id=create_table/attempt=1.log
[2022-08-03 15:30:05,185] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.create_table manual__2022-08-03T15:29:54.472361+00:00 [queued]>
[2022-08-03 15:30:05,226] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: ltv-pipeline.create_table manual__2022-08-03T15:29:54.472361+00:00 [queued]>
[2022-08-03 15:30:05,242] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-03 15:30:05,258] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-03 15:30:05,272] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-03 15:30:05,392] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_table> on 2022-08-03 15:29:54.472361+00:00
[2022-08-03 15:30:05,611] {standard_task_runner.py:52} INFO - Started process 613 to run task
[2022-08-03 15:30:05,775] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'ltv-pipeline', 'create_table', 'manual__2022-08-03T15:29:54.472361+00:00', '--job-id', '32', '--raw', '--subdir', 'DAGS_FOLDER/dag-test.py', '--cfg-path', '/tmp/tmp74phlu1z', '--error-file', '/tmp/tmp4xx1bdil']
[2022-08-03 15:30:05,805] {standard_task_runner.py:80} INFO - Job 32: Subtask create_table
[2022-08-03 15:30:06,374] {task_command.py:371} INFO - Running <TaskInstance: ltv-pipeline.create_table manual__2022-08-03T15:29:54.472361+00:00 [running]> on host 3b0f05b8acbc
[2022-08-03 15:30:06,712] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=ltv-pipeline
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-03T15:29:54.472361+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-03T15:29:54.472361+00:00
[2022-08-03 15:30:06,740] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-08-03 15:30:06,781] {dbapi.py:231} INFO - Running statement: CREATE OR REPLACE TABLE vehicles (
                    id TEXT,
                    vin TEXT,
                    price TEXT,
                    miles TEXT, 
                    stock_no TEXT, 
                    year TEXT, 
                    make TEXT, 
                    model TEXT, 
                    trim TEXT, 
                    body_type TEXT, 
                    vehicle_type TEXT, 
                    drivetrain TEXT, 
                    transmission TEXT, 
                    fuel_type TEXT, 
                    engine_size TEXT, 
                    engine_block TEXT,
                    seller_name TEXT, 
                    street TEXT, 
                    city TEXT, 
                    state TEXT, 
                    zip  TEXT
                    );      , parameters: None
[2022-08-03 15:30:06,814] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 1: CREATE OR REPLACE TABLE vehicles (
                          ^

[2022-08-03 15:30:06,929] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=ltv-pipeline, task_id=create_table, execution_date=20220803T152954, start_date=20220803T153005, end_date=20220803T153006
[2022-08-03 15:30:07,001] {standard_task_runner.py:97} ERROR - Failed to execute job 32 for task create_table (syntax error at or near "TABLE"
LINE 1: CREATE OR REPLACE TABLE vehicles (
                          ^
; 613)
[2022-08-03 15:30:07,112] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-03 15:30:07,287] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
